@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-07T16:23:44Z",
+  "timestamp" : "2022-05-08T01:26:31Z",
   "count_outdated" : 138,
   "uniques_outdated" : 94,
-  "count" : 206,
-  "uniques" : 133,
+  "count" : 226,
+  "uniques" : 138,
   "clones" : [
     {
       "timestamp": "2022-04-25T00:00:00Z",
@@ -56,10 +56,10 @@
     },
     {
       "timestamp": "2022-05-07T00:00:00Z",
-      "count": 4,
-      "count_minmax": [ 0, 4 ],
-      "uniques": 3,
-      "uniques_minmax": [ 0, 3 ]
+      "count": 24,
+      "count_minmax": [ 0, 24 ],
+      "uniques": 8,
+      "uniques_minmax": [ 0, 8 ]
     }
   ]
 }
