@@ -1,3 +1,9 @@
+2022-05-08T01:26:31Z:
+* notice: last 14d: all unq: 88 19
+* notice: prev accum: outdated-all outdated-unq / all unq: 138 94 / 206 133
+* notice: next accum: outdated-all outdated-unq / all unq: 138 94 / 226 138
+* notice: prev json diff // prev day diff: unq all: +5 +20 / -0 -0 // +5 +20 / -0 -0
+
 2022-05-07T16:23:44Z:
 * notice: last 14d: all unq: 68 18
 * notice: prev accum: outdated-all outdated-unq / all unq: 138 94 / 202 130
